LibOverride pulls heavy data modifier meshdeform #97967

Closed
opened 2022-05-08 20:53:29 +02:00 by Dmitriy · 7 comments

System Information
Operating system: Linux
Graphics card: Radeon RX 550

Blender Version
Broken: (Any version with LibOverride)
Worked: (newest version of Blender that worked as expected)

Short description of error
Storing overrides of heavy data-blocks uses a lot of space in .blend files, for data that is not overridable i.e. modifier meshdeform data.
Some projects use 7 times disk space :-(

Exact steps for others to reproduce the error
Examples:
source.blend

override.blend

proxy.blend

**System Information** Operating system: Linux Graphics card: Radeon RX 550 **Blender Version** Broken: (Any version with LibOverride) Worked: (newest version of Blender that worked as expected) **Short description of error** Storing overrides of heavy data-blocks uses a lot of space in .blend files, for data that is not overridable i.e. modifier meshdeform data. Some projects use 7 times disk space :-( **Exact steps for others to reproduce the error** Examples: [source.blend](https://archive.blender.org/developer/F13058884/source.blend) [override.blend](https://archive.blender.org/developer/F13058882/override.blend) [proxy.blend](https://archive.blender.org/developer/F13058881/proxy.blend)
Author

Added subscriber: @dimant72

Added subscriber: @dimant72
Member

Added subscribers: @mont29, @OmarEmaraDev

Added subscribers: @mont29, @OmarEmaraDev
Member

@mont29 Is it expected that files with overrides will increase in size to that degree?

@mont29 Is it expected that files with overrides will increase in size to that degree?
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

We probably want to do the same thing as what we do already with meshes, skip writing this data for overrides...

Not really a bug, more like a TODO.

We probably want to do the same thing as what we do already with meshes, skip writing this data for overrides... Not really a bug, more like a TODO.

This issue was referenced by 68d203af0b

This issue was referenced by 68d203af0bfbdf132604b5b2541e6f1fe9c49764

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Bastien Montagne self-assigned this 2022-05-16 17:00:09 +02:00
Thomas Dinges added this to the 3.3 LTS milestone 2023-02-08 15:37:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97967
No description provided.