source/blender/modifiers/intern/MOD_surfacedeform.c
@@ -1669,9 +1669,11 @@ static void panelRegister(ARegionType *region_type)
   modifier_panel_register(region_type, eModifierType_SurfaceDeform, panel_draw);
 }
 
-static void blendWrite(BlendWriter *writer, const ModifierData *md)
+static void blendWrite(BlendWriter *writer, const ID *UNUSED(id_owner), const ModifierData *md)
 {
   const SurfaceDeformModifierData *smd = (const SurfaceDeformModifierData *)md;
+
+  BLO_write_struct(writer, SurfaceDeformModifierData, smd);
 
   BLO_write_struct_array(writer, SDefVert, smd->bind_verts_num, smd->verts);
 
