source/blender/modifiers/intern/MOD_warp.c
@@ -489,9 +489,11 @@ static void panelRegister(ARegionType *region_type)
       region_type, "texture", "Texture", NULL, texture_panel_draw, panel_type);
 }
 
-static void blendWrite(BlendWriter *writer, const ModifierData *md)
+static void blendWrite(BlendWriter *writer, const ID *UNUSED(id_owner), const ModifierData *md)
 {
   const WarpModifierData *wmd = (const WarpModifierData *)md;
+
+  BLO_write_struct(writer, WarpModifierData, wmd);
 
   if (wmd->curfalloff) {
     BKE_curvemapping_blend_write(writer, wmd->curfalloff);
